Revision history for UFL-WebAdmin-SVN

0.06
        - Add support for additional databases to the Trac creation
          script

0.05  Wed Apr 14 12:29:47 EDT 2010
        - Move scripts from external repository for creating a repository
          and Trac instance

0.04  Mon Mar 22 16:43:12 EDT 2010
        - Update email address for commit notifications to
          webadmin-commits-l@lists.ufl.edu

0.03  Wed Dec 10 17:23:15 EST 2008
        - Remove a couple of unnecessary calls

0.02  Wed Dec 10 17:18:54 EST 2008
        - Update for Trac 0.11

0.01  Fri May 30 14:58:56 EDT 2008
        - Initial revision